# unipm

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  SETUP.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: packages.json
docs/: ARCHITECTURE.md  index.html
include/unipm/: config.h  doctor.h  self_uninstall.h  types.h
scripts/: build-mingw.ps1  build.ps1  build.sh  install.ps1  install.sh
src/: config.cpp  doctor.cpp  executor.cpp  main.cpp  os_detector.cpp  parser.cpp  pm_detector.cpp  resolver.cpp  safety.cpp  self_uninstall.cpp  types.cpp  ui.cpp
src/adapters/: apt_adapter.cpp  brew_adapter.cpp  choco_adapter.cpp  dnf_adapter.cpp  pacman_adapter.cpp  winget_adapter.cpp
tests/: CMakeLists.txt  test_os_detector.cpp  test_resolver.cpp
